--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -23,5 +23,9 @@
     "tailwindcss": "^3.4.0",
     "tsup": "^8.0.1",
     "typescript": "^5.3.3"
+  },
+  "dependencies": {
+    "@nextui-org/react": "^2.2.9",
+    "framer-motion": "^11.0.7"
   }
 }
